# btcfunkpay

./: .gitignore  AUDIT.md  CLAUDE.md  INTEGRATION.md  LICENSE  README.md  btcfunkpay.conf.example  pyproject.toml  server.py  shop.py
btcfunkpay/: __init__.py  _bip32.py  _config.py  _db.py  _models.py  _monitor.py  _rpc.py  processor.py
examples/: fastapi_integration.py  server.py  simple_polling.py  standalone.py  widget_demo.html
static/: funkpay.js  index.html  shop.html  widget.js
tests/: test_bip32.py  test_db.py  test_monitor.py  test_rpc.py
