[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "btcfunkpay"
version = "0.1.0"
description = "Bitcoin on-chain payment processing via Bitcoin Core RPC"
requires-python = ">=3.11"
dependencies = ["requests>=2.28,<3", "httpx>=0.27,<1", "fastapi>=0.111,<1", "uvicorn[standard]>=0.29,<1", "slowapi>=0.1,<1", "python-multipart>=0.0.9,<1"]

[project.optional-dependencies]
async = ["aiohttp>=3.9"]
dev   = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
